--- a/GuestManagementSystem/GMS.API/GMS.API.csproj
+++ b/GuestManagementSystem/GMS.API/GMS.API.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
+    <ProjectReference Include="..\DataAccessLayer\GMS.Data.csproj" />
   </ItemGroup>
 
 </Project>
