--- a/GuestManagementSystem/GMS.Tests/GMS.Tests.csproj
+++ b/GuestManagementSystem/GMS.Tests/GMS.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
+    <ProjectReference Include="..\DataAccessLayer\GMS.Data.csproj" />
   </ItemGroup>
 
 </Project>
